--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gatsby": "^2.32.13",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-less": "^5.13.0",
+    "gatsby-plugin-sharp": "^4.10.2",
     "gatsby-plugin-typescript": "^3.13.0",
+    "gatsby-remark-images": "^6.10.2",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
     "less": "^4.1.1",
