--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^4.2.0",
     "gatsby": "^2.32.13",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-less": "^5.13.0",
     "gatsby-plugin-sharp": "^4.10.2",
     "gatsby-plugin-typescript": "^3.13.0",
+    "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-remark-images": "^6.10.2",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
