--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-less": "6.22.0",
     "gatsby-plugin-sharp": "4.22.0",
     "gatsby-plugin-typescript": "4.22.0",
+    "gatsby-remark-copy-linked-files": "5.22.0",
     "gatsby-remark-highlight-code": "3.2.0",
     "gatsby-remark-images": "6.22.0",
     "gatsby-source-filesystem": "4.22.0",
